# autoarr

./: .dockerignore  .env.example  .env.free.example  .env.host  .env.premium.example  .env.synology.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  COMPLETE_OPTIMIZATION_REPORT.md  CONFIGURATION_AUDIT_API_IMPLEMENTATION_SUMMARY.md  COVERAGE_GAPS.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKERFILE_OPTIMIZATION.md  DOCKER_BUILD_FIXES.md  DOCKER_CI_CD_CHANGES.md  DOCKER_OPTIMIZATION_SUMMARY.md  Dockerfile  Dockerfile.free  Dockerfile.optimized  Dockerfile.premium  FASTAPI_GATEWAY_IMPLEMENTATION_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INTELLIGENT_RECOMMENDATION_ENGINE_SUMMARY.md  LICENSE  PR_REVIEW_SUMMARY.md  QUICK_START.md  RADARR_COMPLETE.md  README.md  README_API.md  RELEASE_SETUP_SUMMARY.md  RELEASING.md  SECURITY.md  SESSION_SUMMARY.md  SPRINT_5_SUMMARY.md  (+27 more)
.claude/: instructions.md  memories.md  settings.local.json
.claude/agents/: backend-api-developer.md  code-reviewer.md  compliance-privacy-guardian.md  dast-security-tester.md  docker-infrastructure-tdd.md  documentation-architect.md  event-architecture-builder.md  frontend-dev-tdd.md  integration-testing-agent.md  llm-integration-architect.md  mcp-server-developer.md  orchestrator-conductor.md  performance-load-tester.md  sast-security-scanner.md  test-architect-tdd.md  ui-images-designer.md
.claude/commands/: clear-devcontainer-memory.md  e2e-test.md  fix-merge-conflicts.md  fix-pr.md  implement-issue.md  local-dev.md  pr-review.md  security-scan.md  test-paths.md  tidy-docs.md
.claude/hooks/: user-prompt-submit-hook
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
.devcontainer/git-hooks/: prepare-commit-msg
.github/: dependabot.yml  labeler.yml  release-notes-header.md
.github/workflows/: ci.yml  codeql.yml  conflict-labeler.yml  dependabot-auto-rebase.yml  docker-deploy.yml  docker-publish.yml  frontend-ci.yml  labeler.yml  landing-page-infra.yml  load-test.yml  native-build.yml  python-ci.yml  release-please.yml
.local/: run_dev.sh
api/: config.py  dependencies.py  main.py  middleware.py  models.py
api/routers/: downloads.py  health.py  mcp.py  media.py  movies.py  settings.py  shows.py
autoarr/api/: __init__.py  config.py  database.py  dependencies.py  main.py  middleware.py  models.py  models_config.py  rate_limiter.py  seed_data.py
autoarr/tests/: README.md  SUMMARY.md  conftest.py  factories.py
autoarr/ui/: .env.example  .prettierrc  .stylelintrc.json  Dockerfile.dev  SPRINT-8-CHAT-UI.md  index.html  package-lock.json  package.json  playwright-ci.config.ts  playwright-container.config.ts  playwright-docker.config.ts  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
autoarrx/: Dockerfile  LICENSE  README.md  __init__.py  pyproject.toml
autoarrx/analytics/: __init__.py
autoarrx/bridge/: __init__.py
autoarrx/cloud/: __init__.py
autoarrx/notifications/: __init__.py
autoarrx/tests/: __init__.py
core/: __init__.py  mcp_orchestrator.py
docker/: ARCHITECTURE.txt  CHECKLIST.md  DEV-CONTAINER-GUIDE.md  Dockerfile.api  Dockerfile.dev  Dockerfile.local-test  Dockerfile.production  Dockerfile.ui  QUICK-START.md  README.md  SETUP-GUIDE.txt  docker-compose.dev-simple.yml  docker-compose.dev.yml  docker-compose.example.yml  docker-compose.local-test-direct.yml  docker-compose.local-test.yml  docker-compose.production.yml  docker-compose.synology.yml  start-dev-container.sh
docs/: AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE.md.old  ARCHITECTURE_DEEP_DIVE.md  ASSESSMENT_2025-11-16.md  BEST_PRACTICES_DB_IMPLEMENTATION_SUMMARY.md  BEST_PRACTICES_SCHEMA.md  BRANCH_PROTECTION_SETUP.md  BUGS.md  BUILD-PLAN.md  BUILD_PLAN_REMAINING.md  CI_CACHE_OPTIMIZATIONS.md  CI_CODE_REFERENCE.md  CI_OPTIMIZATION.md  CI_OPTIMIZATION_SUMMARY.md  CODE-EXAMPLES.md  CONFIGURATION.md  CONFIGURATION_API_EXAMPLES.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_PIPELINE.md  DEPLOYMENT_READINESS.md  DEVELOPMENT.md  DOCKER_SETUP.md  DOCUMENTATION_RESTRUCTURE_SUMMARY.md  DOCUMENTATION_SPLIT.md  FAQ.md  GITHUB_CLI_FIX.md  GITHUB_SETUP.md  HOST_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE_COMPATIBILITY.md  LLM-IMPLEMENTATION-GUIDE.md  LLM-TRAINING-STRATEGY.md  LLM_AGENT_IMPLEMENTATION.md  LLM_PLUGIN_ARCHITECTURE.md  LLM_PROVIDER_MIGRATION_GUIDE.md  LOCAL_TESTING_GUIDE.md  MCP_SERVER_GUIDE.md  (+28 more)
docs/_archive/: ASSESSMENT_2025-11-16.md  CI_OPTIMIZATION_SUMMARY.md  DOCKER_BUILD_FIXES.md  DOCUMENTATION_RESTRUCTURE_SUMMARY.md  DOCUMENTATION_SPLIT.md  FEATURE_CLARITY.md  GITHUB_CLI_FIX.md  NAME-ANALYSIS.md  PLAYWRIGHT_TEST_FIXES.md  PROGRESS_2025-11-16.md  PROGRESS_SUMMARY.md  PR_SITUATION_SUMMARY.md  QUICK-START.md  README.md  ROADMAP.md  SPRINT_9_SUMMARY.md  VISION.md  ideas.md.original
docs/api/: readme.md  reference.md  testing-guide.md  versioning.md
docs/architecture/: README.md  overview.md
docs/archive/: COVERAGE_GAPS.md  DOCKER_BUILD_FIXES.md  FEATURE_CLARITY.md  NAME-ANALYSIS.md  PLAYWRIGHT_TEST_FIXES.md  PROGRESS_SUMMARY.md  PROJECT-SUMMARY.md  PR_SITUATION_SUMMARY.md  QUICK-START.md  SPRINT_9_SUMMARY.md  VISION.md  ideas.md.original
docs/autoarr/: README.md
docs/autoarrx/: PRICING.md  PRIVACY.md  README.md
docs/deployment/: README.md  ci-code-reference.md  ci-optimization.md  overview.md  pipeline.md  readiness.md  synology-deployment.md
docs/development/: README.md  best-practices-usage-guide.md  code-examples.md  contributing.md  early-error-detection.md  git-flow.md  overview.md
examples/: README.md  intelligent_recommendation_demo.py  llm_agent_usage.py  radarr_example.py
scripts/: format.py  format.sh  quick-validation.sh  quickstart.sh  run-e2e-tests.sh  run-post-deployment-tests.sh  seed_best_practices.py  smoke-test.sh  start-local-test.sh  start_api.py  test-all.sh  test.py  test.sh  verify-setup.sh  verify_api.py  verify_radarr_implementation.py
tests/: README.md  SUMMARY.md  conftest.py
ui/: package.json  tailwind.config.js
(+445 files in other folders)
