[tool.poetry]
name = "autoarr"
version = "0.1.0"
description = "An intelligent media automation orchestrator using MCP servers and LLM-powered assistance"
authors = ["AutoArr Team"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "autoarr" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
redis = "^5.0.1"
httpx = "^0.27.0"
python-multipart = "^0.0.20"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
mcp = "^0.9.0"
anthropic = "^0.8.0"
aiosqlite = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"
pytest-httpx = "^0.30.0"
vulture = "^2.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["autoarr/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow running tests (deselect with '-m \"not slow\"')",
]
addopts = [
    "--cov=autoarr",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=0"
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.vulture]
min_confidence = 80
paths = ["autoarr/"]
exclude = ["**/tests/", "**/__pycache__/", "**/node_modules/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
