[tool.poetry]
name = "autoarr"
version = "0.8.0"
description = "An intelligent media automation orchestrator using MCP servers and LLM-powered assistance"
authors = ["AutoArr Team"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
    { include = "autoarr" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.124.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
sqlalchemy = "^2.0.44"
alembic = "^1.17.2"
asyncpg = "^0.31.0"
redis = "^7.1.0"
httpx = "^0.27.0"
python-multipart = "^0.0.20"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
mcp = "^1.23.2"
anthropic = "^0.75.0"
aiosqlite = "^0.21.0"
beautifulsoup4 = "^4.14.2"
slowapi = "^0.1.9"
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
black = "^25.12.0"
flake8 = "^7.3.0"
mypy = "^1.7.1"
pre-commit = "^4.5.0"
pytest-httpx = "^0.34.0"
vulture = "^2.11"
bandit = "^1.9.2"
locust = "^2.42.5"
autoflake = "^2.3.1"
isort = "^7.0.0"
pylint = "^4.0.3"
safety = "^3.7.0"
pyinstaller = {version = "^6.11.0", python = "<3.14"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["autoarr/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow running tests (deselect with '-m \"not slow\"')",
]
addopts = [
    "--cov=autoarr",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=0"
]

[tool.coverage.run]
omit = [
    "autoarr/tests/load/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "from __future__ import annotations",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
# Relaxed settings for existing codebase with pre-existing type issues
# These can be tightened incrementally in future sprints
warn_return_any = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
ignore_errors = true  # Ignore all errors - existing codebase has many pre-existing issues
exclude = [
    "autoarr/tests/",
    "autoarr/ui/",
]
namespace_packages = false

[tool.vulture]
min_confidence = 80
paths = ["autoarr/"]
exclude = ["**/tests/", "**/__pycache__/", "**/node_modules/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
